--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/fortify": "^1.25",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
